--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "firebase": "^9.8.2",
+    "formik": "^2.2.9",
     "intersection-observer": "^0.12.0",
     "just-debounce-it": "^3.0.1",
     "react": "^18.1.0",
